# SoloLog

./: .eslintrc.cjs  .gitignore  .sololog-paths.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-content.mjs  pack-mac.mjs  run-tauri.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs
src/assets/styles/: global.css  reset.css
src/components/content/: ContentTree.vue
src/pages/home/: HomePage.vue
src/pages/login/: LoginPage.vue
src/pages/not-found/: NotFoundPage.vue
src/router/: index.ts
src/services/: http.ts
src/services/modules/: auth.ts  backup.ts  content.ts  deploy.ts  editor.ts  publish.ts  settings.ts
src/store/modules/: user.ts
src/types/: content.ts  toc.ts
src/utils/: storage.ts
